force-app/main/default/objects/Sub_GL_Account__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Real Connect Payments</fullName>
            </value>
            <value>
                <fullName>Payment Links</fullName>
            </value>
            <value>
                <fullName>Direct Cash Deposit</fullName>
            </value>
            <value>
                <fullName>Direct Cheque Deposit</fullName>
            </value>
            <value>
                <fullName>Manager Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>